--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -22,19 +22,34 @@
     justify-content: space-evenly;
 }
 
+.li {
+    display: flex;
+    width: 100%;
+    height: 90%;
+    margin: 0 10px;
+    align-items: center;
+    justify-content: center;
+}
+
 .item {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    transition-property: background-color;
+    transition: 0.3s ease;
+    border-radius: 10px;
     font-size: 20px;
     color: #fff;
-    transition-property: color;
-    transition: 0.3s ease;
 }
 
 .item:hover {
-    color: #ccc;
+    background-color: rgba(200, 200, 200, 0.4);
 }
 
 .item:active {
-    color: #bbb;
+    background-color: rgba(150, 150, 150, 0.4);
 }
 
 .nav-img {
@@ -48,4 +63,11 @@
     font-size: 24px;
     color: #fff;
     padding-left: 30px;
+}
+
+.active {
+    height: 100%;
+    background-color: none;
+    border-bottom: 2px solid #c30e2e;
+    border-radius: 0;
 }
