--- a/src/app/components/signUp/signUp.component.css
+++ b/src/app/components/signUp/signUp.component.css
@@ -2,21 +2,10 @@
     display: flex;
     flex-direction: column;
     width: 60%;
-    height: 90%;
+    height: 80%;
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.4);
-}
-
-.title-card {
-    display: flex;
-    width: 100%;
-    height: 20%;
-    background-color: #ccc;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px 10px 0 0;
-    border-bottom: 2px solid #c30e2e;
+    box-shadow: 0 0 15px rgba(200, 200, 200, 0.4);
 }
 
 .body-card {
@@ -32,49 +21,44 @@
     grid-template-rows: repeat(3, 1fr) 60px;
     grid-auto-rows: 1fr;
     gap: 30px;
-    padding: 20px 40px;
+    padding: 40px;
 }
 
 .button {
     grid-column: 1/3;
-    align-self: flex-start;
-}
-
-label, input, button {
-    display: inline-block;
-    width: 100%;
 }
 
 input, button {
-    height: 30px;
+    display: inline-block;
+    width: 100%;
+    height: 50px;
     outline: none;
     border: none;
     border-radius: 4px;
-    transition-property: background-color;
-    transition: 0.3s ease;
-}
-
-label {
-    margin-bottom: 15px;
-    color: #000;
+    font-size: 18px;
 }
 
 input {
-    padding-left: 5px;
-    background-color: #ddd;
+    padding-left: 10px;
+    border: 1px solid #dddfe2;
+    background-color: #fff;
+    transition-property: border-color;
+    transition: 0.3s ease;
 }
 
 input:hover {
-    background-color: #ccc;
+    border-color: #babcbe;
 }
 
 input:focus {
-    background-color: #bbb;
+    border-color: #9d9ea0;
 }
 
 button {
     color: #fff;
     background-color: #c30e2e;
+    transition-property: background-color;
+    transition: 0.3s ease;
 }
 
 button:hover {
@@ -83,13 +67,4 @@ button:hover {
 
 button:active {
     background-color: #7c0c20;
-}
-
-.title {
-    font-size: 24px;
-}
-
-.title_form {
-    text-align: center;
-    color: #000;
 }
