--- a/src/app/components/signUp/signUp.component.html
+++ b/src/app/components/signUp/signUp.component.html
@@ -1,32 +1,23 @@
 <div class="card">
-    <div class="title-card">
-        <h2 class="title">Registro</h2>
-    </div>
     <div class="body-card">
         <form class="form" action="">
             <div class="form__input-name">
-                <label for="input_name">Nombre</label>
-                <input type="text" id="input_name" autofocus autocomplete="off">
+                <input type="text" id="input_name" autofocus autocomplete="off" placeholder="Nombre">
             </div>
             <div class="form__input-lastname">
-                <label for="input_lastname">Apellidos</label>
-                <input type="text" id="input_lastname" autofocus autocomplete="off">
+                <input type="text" id="input_lastname" autofocus autocomplete="off" placeholder="Apellidos">
             </div>
             <div class="form__input-user">
-                <label for="input_username">Usuario</label>
-                <input type="text" id="input_username" autofocus autocomplete="off">
+                <input type="text" id="input_username" autofocus autocomplete="off" placeholder="Nombre de usuario">
             </div>
             <div class="form__input-email">
-                <label for="input_email">Correo Electrónico</label>
-                <input type="email" id="input_email" autofocus autocomplete="off">
+                <input type="email" id="input_email" autofocus autocomplete="off" placeholder="Correo electrónico">
             </div>
             <div class="form__input-password">
-                <label for="input_password">Contraseña</label>
-                <input type="password" id="input_password">
+                <input type="password" id="input_password" placeholder="Contraseña">
             </div>
             <div class="form__input-confirm">
-                <label for="input_confirm">Confirmar contraseña</label>
-                <input type="password" id="input_confirm">
+                <input type="password" id="input_confirm" placeholder="Confirmar contraseña">
             </div>
             <div class="button">
                 <button type="submit">
