--- a/src/app/components/signUp/signUp.component.html
+++ b/src/app/components/signUp/signUp.component.html
@@ -1,29 +1,31 @@
-<div class="card">
-    <div class="body-card">
-        <form class="form" action="">
-            <div class="form__input-name">
-                <input type="text" id="input_name" autofocus autocomplete="off" placeholder="Nombre">
-            </div>
-            <div class="form__input-lastname">
-                <input type="text" id="input_lastname" autofocus autocomplete="off" placeholder="Apellidos">
-            </div>
-            <div class="form__input-user">
-                <input type="text" id="input_username" autofocus autocomplete="off" placeholder="Nombre de usuario">
-            </div>
-            <div class="form__input-email">
-                <input type="email" id="input_email" autofocus autocomplete="off" placeholder="Correo electrónico">
-            </div>
-            <div class="form__input-password">
-                <input type="password" id="input_password" placeholder="Contraseña">
-            </div>
-            <div class="form__input-confirm">
-                <input type="password" id="input_confirm" placeholder="Confirmar contraseña">
-            </div>
-            <div class="button">
-                <button type="submit">
-                    Envíar
-                </button>
-            </div>
-        </form>
+<div class="container-register">
+    <div class="card">
+        <div class="body-card">
+            <form class="form" action="">
+                <div class="form__input-name">
+                    <input type="text" id="input_name" autofocus autocomplete="off" placeholder="Nombre">
+                </div>
+                <div class="form__input-lastname">
+                    <input type="text" id="input_lastname" autofocus autocomplete="off" placeholder="Apellidos">
+                </div>
+                <div class="form__input-user">
+                    <input type="text" id="input_username" autofocus autocomplete="off" placeholder="Nombre de usuario">
+                </div>
+                <div class="form__input-email">
+                    <input type="email" id="input_email" autofocus autocomplete="off" placeholder="Correo electrónico">
+                </div>
+                <div class="form__input-password">
+                    <input type="password" id="input_password" placeholder="Contraseña">
+                </div>
+                <div class="form__input-confirm">
+                    <input type="password" id="input_confirm" placeholder="Confirmar contraseña">
+                </div>
+                <div class="button">
+                    <button type="submit">
+                        Envíar
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
