--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -17,7 +17,7 @@
 .menu {
     display: flex;
     flex-direction: row;
-    width: 40%;
+    width: 50%;
     align-items: center;
     justify-content: space-evenly;
 }
@@ -25,8 +25,7 @@
 .li {
     display: flex;
     width: 100%;
-    height: 90%;
-    margin: 0 10px;
+    height: 100%;
     align-items: center;
     justify-content: center;
 }
@@ -39,7 +38,6 @@
     justify-content: center;
     transition-property: background-color;
     transition: 0.3s ease;
-    border-radius: 10px;
     font-size: 20px;
     color: #fff;
 }
@@ -66,8 +64,7 @@
 }
 
 .active {
-    height: 100%;
-    background-color: none;
-    border-bottom: 2px solid #c30e2e;
     border-radius: 0;
+    border-bottom: 4px solid #c30e2e;
+    color: #c30e2e;
 }
