--- a/src/app/components/signUp/signUp.component.css
+++ b/src/app/components/signUp/signUp.component.css
@@ -1,3 +1,12 @@
+.container-register {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .card {
     display: flex;
     flex-direction: column;
