--- a/src/app/components/signUp/signUp.component.css
+++ b/src/app/components/signUp/signUp.component.css
@@ -11,7 +11,9 @@
     display: flex;
     flex-direction: column;
     width: 60%;
-    height: 80%;
+    height: 90%;
+    min-height: 400px;
+    min-width: 700px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(200, 200, 200, 0.4);
@@ -61,6 +63,10 @@ input:hover {
 
 input:focus {
     border-color: #9d9ea0;
+}
+
+input:focus::placeholder {
+    color: #c30e2e;
 }
 
 button {
