--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 16px;
 }
 
@@ -32,10 +32,10 @@ app-root {
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 100px 1fr 100px;
-    grid-template-rows: 70px 1fr;
-    grid-template-areas: 'nav nav nav' 'izq main der';
-    min-width: 1030px;
+    grid-template-columns: 1fr 85% 1fr;
+    grid-template-rows: 70px 1fr 60px;
+    grid-template-areas: 'nav nav nav' 'izq main der' 'footer footer footer';
+    min-width: 950px;
     min-height: 100vh;
 }
 
@@ -45,10 +45,18 @@ router-outlet {
 
 app-nav {
     grid-area: nav;
+    width: 100%;
+    height: 100%;
 }
 
 app-home {
     grid-area: main;
+    width: 100%;
+    height: 100%;
+}
+
+app-footer {
+    grid-area: footer;
     width: 100%;
     height: 100%;
 }
