--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -1,9 +1,10 @@
 .nav {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 70px;
     background: linear-gradient(to bottom, #263238, #000a12);
     justify-content: space-between;
+    position: fixed;
 }
 
 .logo {
