--- a/src/app/components/signIn/signIn.component.html
+++ b/src/app/components/signIn/signIn.component.html
@@ -9,11 +9,11 @@
             <div class="body-card">
                 <form class="form" action="">
                     <div class="form__input-name">
-                        <input [(ngModel)]='newUser.name' type="text" id="input_name" autofocus autocomplete="off"
+                        <input [(ngModel)]='user.name' type="text" id="input_name" autofocus autocomplete="off"
                             name="name" placeholder="Usuario o correo electrónico">
                     </div>
                     <div class="form__input-password">
-                        <input [(ngModel)]='newUser.password' type="password" id="input_password" name="password"
+                        <input [(ngModel)]='user.password' type="password" id="input_password" name="password"
                             placeholder="Contraseña">
                     </div>
                     <div class="button">
