--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -1,7 +1,7 @@
 .nav {
     display: flex;
     width: 100%;
-    height: 70px;
+    height: 60px;
     background: linear-gradient(to bottom, #263238, #000a12);
     justify-content: space-between;
     position: fixed;
@@ -9,6 +9,7 @@
 
 .logo {
     width: 30%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -54,8 +55,7 @@
 
 .nav-img {
     display: inline-block;
-    width: 60px;
-    height: 60px;
+    width: 50px;
 }
 
 .nav-title {
