--- a/src/app/components/signIn/signIn.component.html
+++ b/src/app/components/signIn/signIn.component.html
@@ -2,15 +2,15 @@
     <div class="description">
         <h2 class="title-login">Inicia sesión para poder usar la aplicación</h2>
         <p class="text-login">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero incidunt neque, id quod quisquam eaque vel mollitia, error eos rem quam consequatur nam delectus magnam dolorem ullam. Quisquam, nihil aliquid.</p>
-        <img class="img-login" src="../../../assets/banner-angular.png" alt="Angular">
+        <img class="img-login" src="../../../assets/images/banner-angular.png" alt="Angular">
     </div>
     <div class="form-area">
         <div class="card">
             <div class="body-card">
                 <form class="form" action="">
                     <div class="form__input-name">
-                        <input [(ngModel)]='user.name' type="text" id="input_name" autofocus autocomplete="off"
-                            name="name" placeholder="Usuario o correo electrónico">
+                        <input [(ngModel)]='user.username' type="text" id="input_name" autofocus autocomplete="off"
+                            name="username" placeholder="Usuario o correo electrónico">
                     </div>
                     <div class="form__input-password">
                         <input [(ngModel)]='user.password' type="password" id="input_password" name="password"
