--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -5,6 +5,7 @@
     background: linear-gradient(to bottom, #263238, #000a12);
     justify-content: space-between;
     position: fixed;
+    min-width: 800px;
 }
 
 .logo {
@@ -43,6 +44,7 @@
     transition: 0.3s ease;
     font-size: 20px;
     color: #fff;
+    cursor: pointer;
 }
 
 .item:hover {
