--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,11 +1,18 @@
 <nav class="nav">
     <div class="logo">
-        <img src="../../../assets/angular.png" alt="Angular" class="nav-img">
+        <img src="../../../assets/images/angular.png" alt="Angular" class="nav-img">
         <h2 class="nav-title">Angular</h2>
     </div>
     <ul class="menu">
-        <li class="li"><a class="item" [routerLinkActive]="['active']" [routerLink]="['home']">Inicio</a></li>
-        <li class="li"><a class="item" [routerLinkActive]="['active']" [routerLink]="['signIn']">Iniciar sesión</a></li>
-        <li class="li"><a class="item" [routerLinkActive]="['active']" [routerLink]="['signUp']">Registrarse</a></li>
+        <ng-container *ngIf="!auth.loggedIn(); else loggedIn">
+            <li class="li"><a class="item" [routerLinkActive]="['active']" [routerLink]="['/home']">Inicio</a></li>
+            <li class="li"><a class="item" [routerLinkActive]="['active']" [routerLink]="['/signIn']">Iniciar sesión</a></li>
+            <li class="li"><a class="item" [routerLinkActive]="['active']" [routerLink]="['/signUp']">Registrarse</a></li>
+        </ng-container>
+        <ng-template #loggedIn>
+            <li class="li"><a class="item" [routerLinkActive]="['active']" [routerLink]="['/home']">Inicio</a></li>
+            <li class="li"><a class="item" [routerLinkActive]="['active']" [routerLink]="['/profile']">Perfil</a></li>
+            <li class="li"><a class="item" [routerLinkActive]="['active']" (click)="auth.logOut()">Cerrar sesión</a></li>
+        </ng-template>
     </ul>
 </nav>
