--- a/src/app/components/signIn/signIn.component.css
+++ b/src/app/components/signIn/signIn.component.css
@@ -7,6 +7,8 @@
     grid-template-areas: 'desc form';
     gap: 50px;
     padding: 40px;
+    min-height: 400px;
+    min-width: 700px;
 }
 
 .description {
