--- a/src/app/components/signUp/signUp.component.css
+++ b/src/app/components/signUp/signUp.component.css
@@ -14,6 +14,7 @@
     height: 90%;
     min-height: 400px;
     min-width: 700px;
+    margin: 10px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(200, 200, 200, 0.4);
