--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,11 @@
     font-size: 16px;
 }
 
+body {
+    width: 100%;
+    height: 100%;
+}
+
 ul {
     list-style: none;
 }
@@ -35,7 +40,7 @@ app-root {
     grid-template-columns: 1fr 85% 1fr;
     grid-template-rows: 60px 1fr 60px;
     grid-template-areas: 'nav nav nav' 'izq main der' 'footer footer footer';
-    min-width: 950px;
+    min-width: 800px;
     min-height: 100vh;
 }
 
@@ -53,6 +58,10 @@ app-home {
     grid-area: main;
     width: 100%;
     height: 100%;
+}
+
+app-profile {
+    grid-area: main;
 }
 
 app-footer {
