--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="nav">
     <div class="logo">
-        <img src="../../../assets/images/angular.png" alt="Angular" class="nav-img">
+        <img src="./assets/images/angular.png" alt="Angular" class="nav-img">
         <h2 class="nav-title">Angular</h2>
     </div>
     <ul class="menu">
