--- a/src/app/components/signIn/signIn.component.html
+++ b/src/app/components/signIn/signIn.component.html
@@ -2,7 +2,7 @@
     <div class="description">
         <h2 class="title-login">Inicia sesión para poder usar la aplicación</h2>
         <p class="text-login">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero incidunt neque, id quod quisquam eaque vel mollitia, error eos rem quam consequatur nam delectus magnam dolorem ullam. Quisquam, nihil aliquid.</p>
-        <img class="img-login" src="../../../assets/images/banner-angular.png" alt="Angular">
+        <img class="img-login" src="./assets/images/banner-angular.png" alt="Angular">
     </div>
     <div class="form-area">
         <div class="card">
